--- a/www/templates/show-detail.html
+++ b/www/templates/show-detail.html
@@ -16,7 +16,7 @@
     <p>
       {{show.description}}
     </p>
-    <button class="button button-block button-positive">
+    <button class="button button-block button-positive" ng-click="openModal()">
     Réserver pour {{show.price}}€
     </button>
       </div>
