--- a/www/templates/connexion.html
+++ b/www/templates/connexion.html
@@ -1,5 +1,6 @@
 <ion-view view-title="Connexion" class="dashboard">
   <ion-content class="padding">
+<p> <font color="red"> En cours de construction </font> </p>
 <div class="list">
   <label class="item item-input item-stacked-label">
     <span class="input-label">Login</span>
