--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -1,27 +1,23 @@
+
 <!--
 Create tabs with an icon and label, using the tabs-positive style.
 Each tab's child <ion-nav-view> directive will have its own
 navigation history that also transitions its views in and out.
 -->
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
-
-  <!-- Home Tab -->
-  <ion-tab title="Home" icon-off="ion-ios-home-outline" icon-on="ion-ios-home" href="#/tab/dash">
-    <ion-nav-view name="tab-dash"></ion-nav-view>
-  </ion-tab>
   <!-- Shows Tab -->
-  <ion-tab title="Spectacles" icon-off="ion-ios-calendar-outline" icon-on="ion-ios-calendar" href="#/tab/shows">
+  <ion-tab title="Home" icon-off="ion-ios-home-outline" icon-on="ion-ios-home" href="#/tab/shows">
     <ion-nav-view name="tab-shows"></ion-nav-view>
   </ion-tab>
     <!-- Recherche Tab -->
   <ion-tab title="Recherche" icon-off="ion-ios-search" icon-on=ion-ios-search href="#/tab/recherche">
     <ion-nav-view name="recherche"></ion-nav-view>
+    <!-- Reservation Tab -->
+  <ion-tab title="Reservation" icon-off="ion-ios-heart-outline" icon-on=ion-ios-heart href="#/tab/reservation">
+    <ion-nav-view name="reservation"></ion-nav-view>
     <!-- Connexion Tab -->
   <ion-tab title="Connexion" icon-off="ion-ios-person-outline" icon-on="ion-ios-person" href="#/tab/connexion">
     <ion-nav-view name="connexion"></ion-nav-view>
   </ion-tab>
-
-
-
-
 </ion-tabs>
+ 
