--- a/www/templates/recherche.html
+++ b/www/templates/recherche.html
@@ -14,7 +14,7 @@
     <p> Ou indiquer un lieu </p>
     <label class="item item-input">
     <i class="icon ion-search placeholder-icon"></i>
-    <input type="text" placeholder="Search" ng-model="user_location">
+    <input type="text" placeholder="Search" ng-model="search.location">
     </label>
     </div>
     <p> Ou indiquer vos préférences musicales </p>
