--- a/www/templates/modal-find.html
+++ b/www/templates/modal-find.html
@@ -4,8 +4,16 @@
       <button class="button button-secondary" ng-click="modal.hide()">Cancel</button></h1>
     </ion-header-bar>
    <ion-content>
-<button class="button button-block button-positive" ng-click="">
-Test
-</button>
+    <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="show in shows | filter:search track by show.id" type="item-text-wrap" href="#/tab/shows/{{show.id}}">
+        <img ng-src="{{show.image}}">
+        <h2>{{show.title}}</h2>
+        <p>{{show.description}}</p>
+    </ion-item>
+    </ion-list>
+    </div>
+	</ion-view>
+	<button class="button button-block button-positive" ng-click="">
+	Test
+	</button>
 </ion-content>
   </ion-modal-view>
