--- a/www/templates/tab-shows.html
+++ b/www/templates/tab-shows.html
@@ -7,16 +7,22 @@
     </p>
       <label class="item item-input">
       <i class="icon ion-search placeholder-icon"></i>
-      <input type="text" placeholder="Search">
+      <input type="text" placeholder="Entrez une ville" ng-model="search.location" >
+      </label>
+      <label class="item item-input">
+      <i class="icon ion-search placeholder-icon"></i>
+      <input type="text" placeholder="Entrez un prix" ng-model="search.price" >
       </label>
     </div>
-    
+    <p>
+ {{user_location}}
+    </p>
     <div class="item item-body">
      <h2>
     Les coups de coeur GoConcert 
     </h2>
     <ion-list>
-      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="show in shows" type="item-text-wrap" href="#/tab/shows/{{show.id}}">
+      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="show in shows | filter:search track by show.id" type="item-text-wrap" href="#/tab/shows/{{show.id}}">
         <img ng-src="{{show.image}}">
         <h2>{{show.title}}</h2>
         <p>{{show.description}}</p>
