--- a/www/templates/tab-shows.html
+++ b/www/templates/tab-shows.html
@@ -7,11 +7,7 @@
     </p>
       <label class="item item-input">
       <i class="icon ion-search placeholder-icon"></i>
-      <input type="text" placeholder="Entrez une ville" ng-model="search.location" >
-      </label>
-      <label class="item item-input">
-      <i class="icon ion-search placeholder-icon"></i>
-      <input type="text" placeholder="Entrez un prix" ng-model="search.price" >
+      <input type="text" placeholder="Que cherchez-vous ?" ng-model="search">
       </label>
     </div>
     <p>
