--- a/www/templates/modal-find.html
+++ b/www/templates/modal-find.html
@@ -3,12 +3,14 @@
       <h1 class="title">Hello
       <button class="button button-secondary" ng-click="modal.hide()">Cancel</button></h1>
     </ion-header-bar>
-   <ion-content>
-    <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="show in shows | filter:search track by show.id" type="item-text-wrap" href="#/tab/shows/{{show.id}}">
+    <ion-content>
+     <div class="item item-body">
+    <ion-list>
+      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="show in shows" type="item-text-wrap" href="#/tab/shows/{{show.id}}">
         <img ng-src="{{show.image}}">
         <h2>{{show.title}}</h2>
         <p>{{show.description}}</p>
-    </ion-item>
+      </ion-item>
     </ion-list>
     </div>
 	</ion-view>
