--- a/www/templates/modal-find.html
+++ b/www/templates/modal-find.html
@@ -14,7 +14,7 @@
     </ion-list>
     </div>
 	</ion-view>
-	<button class="button button-block button-positive" ng-click="">
+	<button class="button button-block button-positive" ng-click="openModal(concert_location)">
 	Test
 	</button>
 </ion-content>
