--- a/www/templates/recherche.html
+++ b/www/templates/recherche.html
@@ -67,7 +67,7 @@
     </label>
 
 </div>
-<button class="button button-block button-positive" ng-click="openModal(concert_location)"">
+<button class="button button-block button-positive" ng-click="openModal(concert_location)">
   Rechercher
 </button>
   </ion-content>
