--- a/www/templates/show-detail.html
+++ b/www/templates/show-detail.html
@@ -5,6 +5,11 @@
   The Friends service returns an array of friend data
 -->
 <ion-view view-title="{{show.title}}">
+<ion-nav-bar>
+  <ion-nav-back-button class="button-dark">
+    <i class="ion-arrow-left-c"></i>
+  </ion-nav-back-button>
+</ion-nav-bar>
   <ion-content class="padding">
   <div class="item">
     <h2>{{show.title}}</h2>
