--- a/www/templates/tab-shows.html
+++ b/www/templates/tab-shows.html
@@ -1,10 +1,10 @@
-<ion-view view-title="Accueil">
-  <ion-content>
-    <div class="list card">
-    <h2 class="dashboard">Bienvenue sur GoConcert</h2>
+<ion-view view-title="Accueil" class="dashboard">
+  <ion-content class="padding">
+    <h1>Bienvenue sur GoConcert</h1>
     <p>
     Vous trouverez sur cette application des recommandations de concerts en fonction de vos goûts musicaux !
     </p>
+    <div class="list card">
       <label class="item item-input">
       <i class="icon ion-search placeholder-icon"></i>
       <input type="text" placeholder="Que cherchez-vous ?" ng-model="search">
