--- a/www/templates/modal-find.html
+++ b/www/templates/modal-find.html
@@ -6,12 +6,13 @@
     <ion-content>
      <div class="item item-body">
     <ion-list>
-      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="show in shows" type="item-text-wrap" href="#/tab/shows/{{show.id}}">
+     
+      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="show in shows" type="item-text-wrap" ng-href="#/tab/shows/{{show.id}}" ng-click="closeModal()">
         <img ng-src="{{show.image}}">
         <h2>{{show.title}}</h2>
         <p>{{show.description}}</p>
       </ion-item>
-    </ion-list>
+     </ion-list>
     </div>
 	</ion-view>
 	<button class="button button-block button-positive" ng-click="openModal(concert_location)">
