--- a/www/templates/recherche.html
+++ b/www/templates/recherche.html
@@ -24,8 +24,8 @@
     <div class="input-label">
     Préférence 1
     </div>
-    <select ng-init ="pref1='1'" ng-model="pref1">
-    <option value="1">Electro</option>
+    <select ng-model="pref1">
+    <option>Electro</option>
     <option>Jazz</option>
     <option>Pop</option>
     <option>Punk</option>
@@ -35,37 +35,6 @@
     <option>Soul</option>
     </select>
     </label>
-    <label class="item item-input item-select">
-    <div class="input-label">
-    Préférence 2
-    </div>
-    <select ng-init="pref2='2'" ng-model="pref2">
-    <option>Electro</option>
-    <option value="2">Jazz</option>
-    <option>Pop</option>
-    <option>Punk</option>
-    <option>Rap</option>
-    <option>Reggae</option>
-    <option>Rock</option>
-    <option>Soul</option>
-    </select>
-    </label>
-    <label class="item item-input item-select">
-    <div class="input-label">
-    Préférence 3
-    </div>
-    <select ng-init="pref3='3'" ng-model="pref3">
-    <option>Electro</option>
-    <option>Jazz</option>
-    <option value="3">Pop</option>
-    <option>Punk</option>
-    <option>Rap</option>
-    <option>Reggae</option>
-    <option>Rock</option>
-    <option>Soul</option>
-    </select>
-    </label>
-
 </div>
 <button class="button button-block button-positive" ng-click="openModal(concert_location)">
   Rechercher
