--- a/www/templates/selection.html
+++ b/www/templates/selection.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Reservation" class="dashboard">
+<ion-view view-title="Selection" class="dashboard">
   <ion-content class="padding">
 <p> <font color="red"> En cours de construction </font> </p>
   </ion-content>
