--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -15,8 +15,8 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="recherche"></ion-nav-view>
      </ion-tab>
     <!-- Reservation Tab -->
-  <ion-tab title="Reservation" icon-off="ion-ios-heart-outline" icon-on=ion-ios-heart href="#/tab/reservation">
-    <ion-nav-view name="reservation"></ion-nav-view>
+  <ion-tab title="Selection" icon-off="ion-ios-heart-outline" icon-on=ion-ios-heart href="#/tab/selection">
+    <ion-nav-view name="selection"></ion-nav-view>
      </ion-tab>
     <!-- Connexion Tab -->
   <ion-tab title="Connexion" icon-off="ion-ios-person-outline" icon-on="ion-ios-person" href="#/tab/connexion">
