--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,5 +1,6 @@
 /* Empty. Add your own CSS if you like */
 img.logo { width: 100%; }
+img.showimage { width: 100%; }
 .dashboard h1 { color: orange; } 
 .toggle.toggle-assertive input:checked + .track {
   border-color: white;
