--- a/www/templates/recherche.html
+++ b/www/templates/recherche.html
@@ -36,7 +36,7 @@
     </select>
     </label>
 </div>
-<button class="button button-block button-positive" ng-click="openModal(concert_location)">
+<button class="button button-block button-positive" ng-click="openModal(concert_location, pref1)">
   Rechercher
 </button>
   </ion-content>
