--- a/www/templates/connexion.html
+++ b/www/templates/connexion.html
@@ -11,7 +11,7 @@
     <input type="text" placeholder="XXXXX">
   </label>
 </div>
-<button class="button button-block button-positive">
+<button class="button button-block">
   Connexion
 </button>
   </ion-content>
