--- a/www/templates/recherche.html
+++ b/www/templates/recherche.html
@@ -10,14 +10,13 @@
        </div>
      </label>
   </li>
-    <div class="list list-inset">
-    <p> Ou indiquer un lieu </p>
+    <p>  <br/> Ou indiquer un lieu </p>
     <label class="item item-input">
     <i class="icon ion-search placeholder-icon"></i>
     <input type="text" placeholder="Search" ng-model="concert_location">
     </label>
     </div>
-    <p> Et / Ou indiquer vos préférences musicales </p>
+    <p> <br/> Et / Ou indiquer vos préférences musicales </p>
     <div class="list">
 
     <label class="item item-input item-select">
@@ -67,7 +66,7 @@
     </label>
 
 </div>
-<button class="button button-block button-positive" ng-click="openModal(concert_location)">
+<button class="button button-block" ng-click="openModal(concert_location)">
   Rechercher
 </button>
   </ion-content>
