--- a/www/templates/recherche.html
+++ b/www/templates/recherche.html
@@ -25,6 +25,7 @@
     Préférence 1
     </div>
     <select ng-model="pref1">
+    <option>Tous</option>
     <option>Electro</option>
     <option>Jazz</option>
     <option>Pop</option>
