--- a/www/templates/selection.html
+++ b/www/templates/selection.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Selection" class="dashboard">
   <ion-content class="padding">
-<p> <font color="red"> En cours de construction </font> </p>
+  <h1 class="title">Découvrez votre selection</h1>
   </ion-content>
 </ion-view>
