Dernière version post skype
dernière version de Benjamin + CSS

--- a/www/templates/recherche.html
+++ b/www/templates/recherche.html
@@ -10,19 +10,18 @@
        </div>
      </label>
   </li>
-    <div class="list list-inset">
-    <p> Ou indiquer un lieu </p>
+    <p>  <br/> Ou indiquer un lieu </p>
     <label class="item item-input">
     <i class="icon ion-search placeholder-icon"></i>
     <input type="text" placeholder="Search" ng-model="concert_location">
     </label>
     </div>
-    <p> Et / Ou indiquer vos préférences musicales </p>
+    <p> <br/> Et / Ou indiquer vos préférences musicales </p>
     <div class="list">
 
     <label class="item item-input item-select">
     <div class="input-label">
-    Préférence 1
+    Préférences
     </div>
     <select ng-model="pref1">
     <option>Tous</option>
