--- a/www/templates/tab-shows.html
+++ b/www/templates/tab-shows.html
@@ -5,7 +5,7 @@
   </ion-nav-back-button>
   </ion-nav-bar>
   <ion-content class="padding">
-    <h1>Bienvenue sur GoConcert</h1>
+    <img src="img/logo.png" class="logo" />
     <p>
     Vous trouverez sur cette application des recommandations de concerts en fonction de vos goûts musicaux !
     </p>
