--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,52 +1,52 @@
 /* Empty. Add your own CSS if you like */
 img.logo { width: 100%; }
-.padding {background-color: #99cccc;}
+.padding {background-color: #ffcc99;}
 .dashboard {
-	background-color: #99cccc;}
+	background-color: #ffcc99;}
 .dashboard h1 { 
-	color: #1f86b6;
+	color: #cc3300;
 	font-size : 35px;
 	font-family: "Hobo std";
 	text-align: center; } 
 .dashboard h2 {
-	color : #20269f;
+	color : #cc3300;
 	font-size : 18px;
 	font-family: "Hobo std";
 	text-align : center;}
 .dashboard p {
-	color : #2d2f5a;
+	color : #cc3300;
 	font-size : 15px;
 	font-family: "kalinga" ;
 	text-align : justify; }
 
 /*l'encadré "les coups de coeur Go Concert dans l'onglet Home */
 .item.item-body {
-	border-color : #009488;
-	background-color: #009488
+	border-color : #ff9966;
+	background-color: #ff9966;
 }
 
 /* les boutons "Rechercher" etc...*/
 .button.button-block {
-	background-color: #009488
+	background-color: #ff9933;
 }
 
 /* L'intérieur des champs à remplir dans l'onglet Connexion --> "Email" et "XXXX"*/
 .item.item-input.item-stacked-label input {
-	background-color: #009488
+	background-color: #ff9966
 }
 /*Onglet Recherche "activer la localisation"*/
 .item.item-toggle {
-	border-color : #009488;
-	background-color: #009488	
+	border-color : #ff9966;
+	background-color: #ff9966	
 }
 /* bannière "que recherchez-vous", "search", "preferences", et "login" et mot de passe" */
 .item.item-input {
-	border-color : #00796B;
-	background-color: #009488;
+	border-color : #ff9966;
+	background-color: #ff9966;
 }
 /*les listes déroulantes de la partie préférence dans l'onglet Recherche : "jazz, electro etc" */
 .item.item-input.item-select select {
-	background-color: #009488
+	background-color: #ff9966
 }
 .toggle.toggle-assertive input:checked + .track {
   border-color: #00BCD4;
