--- a/www/templates/tab-shows.html
+++ b/www/templates/tab-shows.html
@@ -7,7 +7,7 @@
   <ion-content class="padding">
     <img src="img/logo.png" class="logo" />
     <p>
-    Vous trouverez sur cette application des recommandations de concerts en fonction de vos goûts musicaux !
+     Go Concert vous recommande des concerts en fonction de vos goûts musicaux !
     </p>
     <div class="list card">
       <label class="item item-input">
