--- a/www/templates/connexion.html
+++ b/www/templates/connexion.html
@@ -2,7 +2,7 @@
 <ion-content class="padding">
 <div class="list" ng-hide=profiletoshow>
   <label class="item item-input item-stacked-label">
-    <span class="input-label">Login</span>
+    <span class="input-label">Email</span>
     <input type="text" placeholder="Email" ng-model="user_name">
   </label>
     <label class="item item-input item-stacked-label">
