--- a/www/templates/connexion.html
+++ b/www/templates/connexion.html
@@ -1,22 +1,31 @@
 <ion-view view-title="Connexion" class="dashboard">
 <ion-content class="padding">
-<div class="list" ng-hide=profiletoshow>
+<div class="list" ng-show=profiletoshow=='0'>
   <label class="item item-input item-stacked-label">
     <span class="input-label">Email</span>
-    <input type="text" placeholder="Email" ng-model="user_name">
+    <input type="text" placeholder="Login" ng-model="user_name">
   </label>
+  </div>
+  <div class="list" ng-show=profiletoshow=='0'>
     <label class="item item-input item-stacked-label">
     <span class="passw-label">Mot de passe</span>
     <input type="password" placeholder="XXXXX" ng-model="password">
   </label>
 </div>
-<button class="button button-block button-positive" ng-click="connexion(user_name, password)" ng-hide=profiletoshow>
-  Connexion
+<button class="button button-block button-positive" ng-click="connexion(user_name, password)" ng-show=profiletoshow=='0'>
+  Connexion 
 </button>
-    <div ng-hide=!profiletoshow>
+    <div class="list" ng-show=profiletoshow=='1'>
+    <label class="item item-input">
       <p> Bienvenue : {{user.user_name}}</p>
+      </label>
+      </div>
+      <div class="list" ng-show=profiletoshow=='1'>
+       <label class="item item-input">
       <p> Localisation par défaut : {{user.location}}</p>
-      <button class="button button-block button-positive" ng-click="deconnexion()" ng-hide=!profiletoshow> Deconnexion
+     </label>
+      </div>
+      <button class="button button-block button-positive" ng-click="deconnexion()" ng-show=profiletoshow=='1'> Deconnexion
     </div>
   </ion-content>
 </ion-view>
