--- a/www/templates/recherche.html
+++ b/www/templates/recherche.html
@@ -2,7 +2,7 @@
   <ion-content class="padding">
     <h1> Rechercher un concert</h1>
     <li class="item item-toggle">
-     Activer la localisation
+     <p>Activer la localisation</p>
      <label class="toggle toggle-assertive">
        <input type="checkbox">
        <div class="track">
@@ -13,7 +13,7 @@
     <p>  <br/> Ou indiquer un lieu </p>
     <label class="item item-input">
     <i class="icon ion-search placeholder-icon"></i>
-    <input type="text" placeholder="Search" ng-model="concert_location">
+    <input type="text" placeholder="Search" ng-init="concert_location='Paris'" ng-model="concert_location">
     </label>
     </div>
     <p> <br/> Et / Ou indiquer vos préférences musicales </p>
@@ -21,10 +21,10 @@
 
     <label class="item item-input item-select">
     <div class="input-label">
-    Préférences
+    <p>Style musical</p>
     </div>
-    <select ng-model="pref1">
-    <option>Tous</option>
+    <select ng-init ="pref1='Tous'" ng-model="pref1">
+    <option value='Tous'>Tous</option>
     <option>Electro</option>
     <option>Jazz</option>
     <option>Pop</option>
