--- a/www/templates/tab-shows.html
+++ b/www/templates/tab-shows.html
@@ -6,10 +6,10 @@
   </ion-nav-bar>
   <ion-content class="padding">
     <img src="img/logo.png" class="logo" />
-    <p>
+    <p class="nobold">
      Go Concert vous recommande des concerts en fonction de vos goûts musicaux !
     </p>
-    <div class="list card">
+    <div class="list">
       <label class="item item-input">
       <i class="icon ion-search placeholder-icon"></i>
       <input type="text" placeholder="Que cherchez-vous ?" ng-model="search">
@@ -17,12 +17,12 @@
     </div>
     <div class="item item-body">
      <h2>
-    Les concerts qui arrivent bientôt ! 
+    Prochainement
     </h2>
     <ion-list>
       <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="show in shows | filter:search | orderBy:'date' track by $index" type="item-text-wrap" href="#/tab/shows/{{show.id}}">
         <img ng-src="{{show.image}}">
-        <h2>{{show.title}}</h2>
+        <h3>{{show.title}}</h3>
         <p>{{show.description}}</p>
       </ion-item>
     </ion-list>
