--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -5,13 +5,13 @@ Each tab's child <ion-nav-view> directive will have its own
 navigation history that also transitions its views in and out.
 -->
 
-<ion-tabs class="tabs-icon-top tabs-color-active-positive">
+<ion-tabs class="tabs-icon-top tabs-color-active-royal">
   <!-- Shows Tab -->
-  <ion-tab title="Home" icon-off="ion-ios-home-outline" icon-on="ion-ios-home" href="#/tab/shows">
+  <ion-tab title="Accueil" icon-off="ion-ios-home-outline" icon-on="ion-ios-home" href="#/tab/shows">
     <ion-nav-view name="tab-shows"></ion-nav-view>
   </ion-tab>
     <!-- Recherche Tab -->
-  <ion-tab title="Recherche" icon-off="ion-ios-search" icon-on=ion-ios-search href="#/tab/recherche">
+  <ion-tab title="Recherche" icon-off="ion-ios-search" icon-on="ion-ios-search" href="#/tab/recherche">
     <ion-nav-view name="recherche"></ion-nav-view>
      </ion-tab>
     <!-- Reservation Tab -->
