--- a/www/templates/connexion.html
+++ b/www/templates/connexion.html
@@ -3,19 +3,20 @@
 <div class="list" ng-show=profiletoshow=='0'>
   <label class="item item-input item-stacked-label">
     <span class="input-label">Email</span>
-    <input type="text" placeholder="Login" ng-model="user_name">
+    <input type="text" placeholder="Login" ng-model="username">
   </label>
   </div>
   <div class="list" ng-show=profiletoshow=='0'>
     <label class="item item-input item-stacked-label">
     <span class="passw-label">Mot de passe</span>
-    <input type="password" placeholder="XXXXX" ng-model="password">
+    <input type="password" placeholder="XXXXX" ng-model="passwd">
   </label>
 </div>
-<button class="button button-block button-positive" ng-click="connexion(user_name, password)" ng-show=profiletoshow=='0'>
+<button class="button button-block button-positive" ng-click="connexion(username, passwd)" ng-show=profiletoshow=='0'>
   Connexion 
 </button>
     <div class="list" ng-show=profiletoshow=='1'>
+    <h1 class="title">Votre compte</h1>
     <label class="item item-input">
       <p> Bienvenue : {{user.user_name}}</p>
       </label>
