--- a/www/templates/show-detail.html
+++ b/www/templates/show-detail.html
@@ -29,7 +29,7 @@
    		 {{show.price}}
  		</a>
 
-      <button class="button button-block button-positive" ng-disabled=profiletoshow=='0'>
+      <button class="button button-block button-positive" ng-disabled=profiletoshow=='0' ng-click="book()">
         Ajouter à ma liste
       </button>
     </div>
