--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -22,6 +22,10 @@ navigation history that also transitions its views in and out.
   <ion-tab title="Connexion" icon-off="ion-ios-person-outline" icon-on="ion-ios-person" href="#/tab/connexion">
     <ion-nav-view name="connexion"></ion-nav-view>
 </ion-tab>
+ <ion-tab title="Map" icon-off="ion-ios-person-outline" icon-on="ion-ios-person" href="#/tab/map">
+    <ion-nav-view name="map"></ion-nav-view>
+</ion-tab>
+
 </ion-tabs>
 
    
