--- a/www/css/style.css
+++ b/www/css/style.css
@@ -111,3 +111,11 @@ img.showimage { width: 100%; }
   color: black !important;
   font-style: italic;
 }
+.scroll {
+    height: 100%;
+}
+ 
+#map {
+    width: 100%;
+    height:100%;
+}
